<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="buttonLabel">Search</string>
    <string name="searchMsg">Enter the Search Term</string>
    <string name="settingLabel">Image Setting</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="tvAdvancedLabel">Advanced Image Setting</string>
    <string name="imageSizeLabel">Image Size</string>
    <string name="colorFilterLabel">Color Filter</string>
    <string name="imageTypeLabel">Image Type</string>
    <string name="siteFilterLabel">Site Filter</string>
    <string name="submitLabel">Submit</string>

    <string-array name="imageSizes">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>
    <string-array name="colorTypes">
        <item>white</item>
        <item>black</item>
        <item>brown</item>
        <item>blue</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>yellow</item>
    </string-array>
    <string-array name="imageTypes">
        <item>photo</item>
        <item>face</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

    <string name="title_activity_image_display">ImageDisplay</string>

    <string name="loadMoreLabel">Load More</string>

</resources>
